# PySQLQuery

./: .gitignore  LICENSE.md  README.md  pyproject.toml  pytest.ini  setup.cfg
docs/: class_diagrams.asta
docs/md/: CONTRIBUTING.md  constraints.md  docs.md  sql_types.md  table.md
src/pysqlquery/: __init__.py
src/pysqlquery/constraints/: __init__.py
src/pysqlquery/constraints/base/: __init__.py  constraint.py  multi_column_named_constraint.py  named_constraint.py  single_column_named_constraint.py  unnamed_constraint.py
src/pysqlquery/constraints/exceptions/: __init__.py  constraint.py  multi_column_named_constraint.py  named_constraint.py  named_foreign_key.py  unnamed_constraint.py  unnamed_foreign_key.py
src/pysqlquery/constraints/named/: __init__.py  foreign_key.py  primary_key.py  (+1 more)
src/pysqlquery/table/: __init__.py  column.py  table.py
src/pysqlquery/types/: __init__.py  bit.py  boolean.py  char.py  date.py  datetime.py  decimal.py  double.py  float.py  integer.py  real.py  string.py  time.py
src/sqlgen/types/: __init__.py  char.py  date.py  datetime.py  float.py  integer.py  string.py
src/sqlquerybuilder/types/: __init__.py  float.py
tests/constraints/: test_named_fk.py  test_named_pk.py  test_named_un.py  test_unnamed_fk.py
tests/table/: test_column.py  test_table.py
tests/types/: test_bit_type.py  test_boolean_type.py  test_char_type.py  test_date_type.py  test_datetime_type.py  test_decimal_type.py  test_double_type.py  test_float_type.py  test_integer_type.py  test_new_type.py  test_real_type.py  test_string_type.py  test_time_type.py
(+37 files in other folders)
