[metadata]
name = pysqlquery
version = 0.0.2
author = Alberto Frigatto
author_email = albertofrigattoferreira@gmail.com
description = A SQL query generator implemented in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Alberto-Frigatto/PySQLQuery
project_urls =
    Bug Tracker = https://github.com/Alberto-Frigatto/PySQLQuery/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src